--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-firefox-launcher": "~1.3.0",
     "karma-jasmine": "~3.1.1",
+    "moment-timezone": "^0.5.32",
     "sass-lint": "~1.13.1",
     "sass-lint-auto-fix": "~0.21.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
